--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,5 @@
+@import url('./background.css');
+
 * {
   padding: 0;
   margin: 0;
@@ -13,7 +15,7 @@
 }
 
 body, button, a {
-  color: var(--text);
+  color: var(--text); 
   font: 400 1rem "Mukta", sans-serif;
 }
 
@@ -23,4 +25,159 @@ a {
 
 button:hover {
   cursor: pointer;
+}
+
+#background {
+  position:fixed;
+  inset:0;
+  z-index:-1;
+  width:100%;
+  height:100vh;
+}
+
+#background video {
+  width:100%;
+  height:100%;
+  object-fit: cover;
+}
+
+#background::after{
+  content: '';
+
+  width: inherit;
+  height: inherit;
+  position: fixed;
+  inset:0;
+  background: linear-gradient(109deg, rgba(10, 12, 16, 0.99) 15%, rgba(10,12, 16, 0.7) 50%, rgba(10, 12, 16, 0.92)85%);
+}
+
+#app {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+ 
+  width:100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
+#app header {
+  justify-content: space-between;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  column-gap: 64px;
+  width: 100%;
+  max-width: 1440px;
+  padding-top: 24px;
+}
+
+header img {
+ 
+  width: 70px;
+  height: auto;
+}
+
+.navigation {
+  display: flex;
+ list-style: none;
+  column-gap: 48px;
+}
+
+li a {
+  font-size: 20px;
+  font-weight: 300;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  position: relative;
+}
+
+li a:hover {
+  color:var(--red);
+}
+
+li a::after {
+  content:'';
+  position: absolute;
+  left: 0;
+  bottom:-2px;
+  width: 60%;
+  height:1px;
+  background: var(--red);
+  transform: scalex(0);
+  transform-origin:right;
+  transition: transform 0.4s;
+}
+li a:hover::after {
+  transform: scaleX(1);
+  transform-origin:left;
+  transition: transform 0.4s;
+}
+
+.navigation-social {
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+  column-gap: 24px;
+}
+
+.navigation-social svg{
+  width: 40px;
+  height: 40px;
+  opacity: 0.6;
+  transition: all 0.2s;
+}
+
+.navigation-social svg:hover {
+  opacity: 1;
+  transform: translateY(-5px);
+}
+
+main {
+  flex:1;
+  justify-content: space-between;
+  display:flex;
+  align-items: center;
+
+  width:100%;
+  max-width:1440px;
+}
+ 
+.info {
+  width:100%;
+  max-width: 550px;
+}
+
+.info div p {
+  font-size: 20px;
+  margin:20px 0 27px;
+}
+
+ .info div {
+  display: flex;
+  column-gap: 32px;
+}
+
+main div .pi .um {
+  width:100%;
+  padding: 10px 0;
+  border-radius:3px;
+  font-size: 19px;
+  font-weight: 600;
+  text-align:center;
+  text-transform:uppercase;
+  letter-spacing:0.3px;
+  transform: skew(-10deg);
+}
+
+
+.pi {
+  background:var(--red);
+}
+
+.um {
+  background: transparent;
+  border: 1px solid var(--green);
 }
